--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,10 @@
 			<version>2.0.2</version>
 		</dependency>
 		<!-- swagger -->
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 		<!-- mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
